--- a/package.json
+++ b/package.json
@@ -9,14 +9,28 @@
     "precommit": "npm run build",
     "serve": "http-server -p 8000 -c-1",
     "dev": "concurrently \"npm run watch\" \"npm run serve\"",
-    "dev:kill": "lsof -ti:8000 | xargs kill -9 2>/dev/null || true; pkill -f 'tsc --watch' 2>/dev/null || true; pkill -f 'http-server' 2>/dev/null || true; echo 'Killed all dev servers'"
+    "dev:kill": "lsof -ti:8000 | xargs kill -9 2>/dev/null || true; pkill -f 'tsc --watch' 2>/dev/null || true; pkill -f 'http-server' 2>/dev/null || true; echo 'Killed all dev servers'",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "format": "prettier --write \"src/**/*.ts\" \"*.html\"",
+    "format:check": "prettier --check \"src/**/*.ts\" \"*.html\"",
+    "typecheck": "tsc --noEmit",
+    "quality": "npm run typecheck && npm run lint && npm run format:check"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
+    "@eslint/js": "^9.39.1",
+    "@types/geojson": "^7946.0.16",
     "@types/leaflet": "^1.9.8",
+    "@typescript-eslint/eslint-plugin": "^8.46.3",
+    "@typescript-eslint/parser": "^8.46.3",
+    "concurrently": "^8.2.2",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "http-server": "^14.1.1",
-    "concurrently": "^8.2.2"
+    "prettier": "^3.6.2",
+    "typescript": "^5.3.3",
+    "typescript-eslint": "^8.46.3"
   },
   "type": "module"
 }
-
