SOURCE - Renamed dir

--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "serve": "http-server -p 8000 -c-1",
     "dev": "concurrently \"npm run watch\" \"npm run serve\"",
     "dev:kill": "lsof -ti:8000 | xargs kill -9 2>/dev/null || true; pkill -f 'tsc --watch' 2>/dev/null || true; pkill -f 'http-server' 2>/dev/null || true; echo 'Killed all dev servers'",
-    "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix",
-    "format": "prettier --write \"src/**/*.ts\" \"*.html\"",
-    "format:check": "prettier --check \"src/**/*.ts\" \"*.html\"",
+    "lint": "eslint source/**/*.ts",
+    "lint:fix": "eslint source/**/*.ts --fix",
+    "format": "prettier --write \"source/**/*.ts\" \"*.html\"",
+    "format:check": "prettier --check \"source/**/*.ts\" \"*.html\"",
     "typecheck": "tsc --noEmit",
     "quality": "npm run typecheck && npm run lint && npm run format:check"
   },
