IMPORT - Ported the original python script into typescript

--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "format": "prettier --write \"source/**/*.ts\" \"*.html\"",
     "format:check": "prettier --check \"source/**/*.ts\" \"*.html\"",
     "typecheck": "tsc --noEmit",
-    "quality": "npm run typecheck && npm run lint && npm run format:check"
+    "quality": "npm run typecheck && npm run lint && npm run format:check",
+    "import:results": "node js/results-import.js"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/geojson": "^7946.0.16",
+    "@types/node": "^22.9.0",
     "@types/leaflet": "^1.9.8",
     "@typescript-eslint/eslint-plugin": "^8.46.3",
     "@typescript-eslint/parser": "^8.46.3",
@@ -31,6 +33,9 @@
     "prettier": "^3.6.2",
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.46.3"
+  },
+  "dependencies": {
+    "stream-json": "^1.8.0"
   },
   "type": "module"
 }
