--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "ES2020",
     "lib": ["ES2020", "DOM"],
     "moduleResolution": "node",
+    "types": ["node"],
     "outDir": "./js",
     "rootDir": "./source",
     "strict": true,
