SCRIPTS - Fully ported to typescript including running via tsx

--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "format:check": "prettier --check \"source/**/*.ts\" \"scripts/**/*.ts\" \"*.html\"",
     "typecheck": "tsc --noEmit",
     "quality": "npm run typecheck && npm run lint && npm run format:check",
-    "import:results": "node js/scripts/results-import.js"
+    "import:results": "tsx scripts/results-import.ts",
+    "enrich:geojson": "tsx scripts/enrich-geojson.ts"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/geojson": "^7946.0.16",
-    "@types/node": "^22.9.0",
     "@types/leaflet": "^1.9.8",
+    "@types/node": "^22.9.0",
     "@typescript-eslint/eslint-plugin": "^8.46.3",
     "@typescript-eslint/parser": "^8.46.3",
     "concurrently": "^8.2.2",
@@ -31,6 +32,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "http-server": "^14.1.1",
     "prettier": "^3.6.2",
+    "tsx": "^4.20.6",
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.46.3"
   },
