--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
-    "clean": "rm -rf js",
+    "clean": "rm -rf js scripts/*.js *.tsbuildinfo",
     "precommit": "npm run build",
     "serve": "http-server -p 8000 -c-1",
     "dev": "concurrently \"npm run watch\" \"npm run serve\"",
